# aio-ipfabric

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
aioipfabric/: __init__.py  aiofut.py  api.py  base_client.py  client.py  consts.py  filters.py  inventory.py  mixin_configs.py  mixin_diagrams.py  mixin_inventory.py  table_api.py
aioipfabric/cli/: __init__.py  clihelpers.py  main.py  table.py
aioipfabric/mixins/: cabling.py  configs.py  diagrams.py  diagramsV4.py  inventory.py  portchan.py  tables.py
docs/: client-extensions.md  filtering.md
examples/: README.md  ex_big_fetch.py  ex_context_manager.py  ex_device_info.py  ex_e2e_diagram.py  ex_fetch_configs.py  ex_fetch_device_list.py  ex_fetch_device_uptime.py  ex_fetch_devices.py  ex_fetch_table.py  ex_portchans.py  ex_site_devices.py  ex_trigger_backup.py  ipf-inventory.py  setup.env
tests/: test_filters.py
